elytraerror
FAILED: out/soong/.intermediates/frameworks/base/framework-minus-apex/android_common/javac/framework-minus-apex.jar15
rm -rf "out/soong/.intermediates/frameworks/base/framework-minus-apex/android_common/javac/shard15/classes" "out/soong/.intermediates/frameworks/base/framework-minus-apex/android_common/javac/shard15/anno" "out/soong/.intermediates/frameworks/base/framework-minus-apex/android_common/javac/shard15/srcjars" "out/soong/.intermediates/frameworks/base/framework-minus-apex/android_common/javac/framework-minus-apex.jar15" && mkdir -p "out/soong/.intermediates/frameworks/base/framework-minus-apex/android_common/javac/shard15/classes" "out/soong/.intermediates/frameworks/base/framework-minus-apex/android_common/javac/shard15/anno" "out/soong/.intermediates/frameworks/base/framework-minus-apex/android_common/javac/shard15/srcjars" && out/soong/host/linux-x86/bin/zipsync -d out/soong/.intermediates/frameworks/base/framework-minus-apex/android_common/javac/shard15/srcjars -l out/soong/.intermediates/frameworks/base/framework-minus-apex/android_common/javac/shard15/srcjars/list -f "*.java"  && (if [ -s out/soong/.intermediates/frameworks/base/framework-minus-apex/android_common/javac/shard15/srcjars/list ] || [ -s out/soong/.intermediates/frameworks/base/framework-minus-apex/android_common/javac/framework-minus-apex.jar15.rsp ] ; then out/soong/host/linux-x86/bin/soong_javac_wrapper prebuilts/jdk/jdk11/linux-x86/bin/javac -J-Xmx2048M -J-XX:OnError="cat hs_err_pid%p.log" -J-XX:CICompilerCount=6 -J-XX:+UseDynamicNumberOfGCThreads -Xmaxerrs 9999999 -encoding UTF-8 -sourcepath "" -g -XDskipDuplicateBridges=true -XDstringConcat=inline -processorpath out/soong/.intermediates/tools/platform-compat/java/android/processor/compat/changeid/compat-changeid-annotation-processor/linux_glibc_common/withres/compat-changeid-annotation-processor.jar:out/soong/.intermediates/tools/platform-compat/java/android/processor/compat/unsupportedappusage/unsupportedappusage-annotation-processor/linux_glibc_common/withres/unsupportedappusage-annotation-processor.jar:out/soong/.intermediates/frameworks/base/tools/processors/view_inspector/view-inspector-annotation-processor/linux_glibc_common/withres/view-inspector-annotation-processor.jar:out/soong/.intermediates/frameworks/base/tools/processors/staledataclass/staledataclass-annotation-processor/linux_glibc_common/withres/staledataclass-annotation-processor.jar:out/soong/.intermediates/frameworks/base/errorprone/error_prone_android_framework_lib/linux_glibc_common/combined/error_prone_android_framework_lib.jar -processor android.processor.compat.changeid.ChangeIdProcessor,android.processor.compat.unsupportedappusage.UnsupportedAppUsageProcessor,android.processor.view.inspector.PlatformInspectableProcessor,android.processor.staledataclass.StaleDataclassProcessor -g:source,lines -Xlint:-dep-ann --system=out/soong/.intermediates/libcore/mmodules/core_platform_api/legacy-core-platform-api-stubs-system-modules/android_common/system -classpath out/soong/.intermediates/tools/platform-compat/java/android/compat/annotation/app-compat-annotations/android_common/turbine-combined/app-compat-annotations.jar:out/soong/.intermediates/frameworks/base/ext/android_common/turbine-combined/ext.jar:out/soong/.intermediates/frameworks/base/framework-updatable-stubs-module_libs_api/android_common/turbine-combined/framework-updatable-stubs-module_libs_api.jar:out/soong/.intermediates/tools/platform-compat/java/android/compat/annotation/unsupportedappusage/android_common/turbine-combined/unsupportedappusage.jar:out/soong/.intermediates/external/bouncycastle/bouncycastle-repackaged-unbundled/android_common/turbine-combined/bouncycastle-repackaged-unbundled.jar:out/soong/.intermediates/frameworks/base/framework-internal-utils/android_common/turbine-combined/framework-internal-utils.jar:out/soong/.intermediates/frameworks/base/mime/mimemap/android_common/turbine-combined/mimemap.jar:out/soong/.intermediates/frameworks/av/av-types-aidl-java/android_common/turbine-combined/av-types-aidl-java.jar:out/soong/.intermediates/frameworks/base/media/java/android/media/tv/tunerresourcemanager/tv_tuner_resource_manager_aidl_interface-java/android_common/turbine-combined/tv_tuner_resource_manager_aidl_interface-java.jar:out/soong/.intermediates/frameworks/base/media/soundtrigger_middleware-aidl-java/android_common/turbine-combined/soundtrigger_middleware-aidl-java.jar:out/soong/.intermediates/frameworks/libs/modules-utils/java/com/android/internal/util/modules-utils-preconditions/android_common/turbine-combined/modules-utils-preconditions.jar:out/soong/.intermediates/frameworks/libs/modules-utils/java/com/android/modules/utils/modules-utils-os/android_common/turbine-combined/modules-utils-os.jar:out/soong/.intermediates/frameworks/native/libs/permission/framework-permission-aidl-java/android_common/turbine-combined/framework-permission-aidl-java.jar:out/soong/.intermediates/frameworks/base/framework-minus-apex/android_common/turbine-combined/framework-minus-apex.jar -source 1.9 -target 1.9 -d out/soong/.intermediates/frameworks/base/framework-minus-apex/android_common/javac/shard15/classes -s out/soong/.intermediates/frameworks/base/framework-minus-apex/android_common/javac/shard15/anno @out/soong/.intermediates/frameworks/base/framework-minus-apex/android_common/javac/framework-minus-apex.jar15.rsp @out/soong/.intermediates/frameworks/base/framework-minus-apex/android_common/javac/shard15/srcjars/list ; fi ) && out/soong/host/linux-x86/bin/soong_zip -jar -o out/soong/.intermediates/frameworks/base/framework-minus-apex/android_common/javac/framework-minus-apex.jar15 -C out/soong/.intermediates/frameworks/base/framework-minus-apex/android_common/javac/shard15/classes -D out/soong/.intermediates/frameworks/base/framework-minus-apex/android_common/javac/shard15/classes && rm -rf "out/soong/.intermediates/frameworks/base/framework-minus-apex/android_common/javac/shard15/srcjars"
frameworks/base/core/java/android/view/ViewConfiguration.java:566: error: method isNumeric(String) is already defined in class ViewConfiguration
    public static boolean isNumeric(String string) {
                          ^
1 error
